# learn-llm-rag

./: .gitignore  LICENSE  NEXT STEPS.md  README.md  pyproject.toml
src/learn_llm_rag/: __init__.py  learn_utils.py  scratch.py  simple_llm.py
